--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,40 @@ footer h3{
 	font-size: 36px;
 }
 
-.social li{  
-	width: 79px;
-	height: 79px;
+.social li{
+	width: 70px;
+	height: 70px;
+	background-color: #eeeeee;
 	border-radius: 50%;
-	background-color: #e1e1e1;
-	text-align: center;
 }
 
-.social img{  
-	width: 29px;
-	height: 29px;
-	margin: 25px;
+.social a{
+	display: block; /* Ссылка как блочный элемент */
+    text-align: center; /* Выравнивание по центру */
+    height: 100%; /* Высота на весь слой */
+    color: #666;
+	border-radius: 50%;
+    position: relative;
 }
+
+.social li:hover{
+	background: #E84044;
+}
+
+.social img{
+    position: absolute;
+    margin: auto;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.social li:active{
+    background: #D83438;
+}
+
+
 
 /*index*/
 .advantages h3{
