--- a/css/style.css
+++ b/css/style.css
@@ -3,77 +3,411 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	color: #000000;
+
+	width: 100%;
+	min-width: 1440px;
+}
+
+.footer .main, .header-block{
+	width: 100%;
+	min-width: 1440px;
+}
+
+.background{
+	background: #eeeeee;
+}
+
+li {
+	list-style-type: none;
+}
+
+ul {
+    margin-left: 0;
+    padding-left: 0; 
+}
+
+h1, h2, h3, h4{
+	padding: 0;
+	margin: 0;
+	font-family: Roboto;
+}
+
+.header, .nav, .slide--one, .partners, .social--icons, .about, .advantages, .statistics--percent{
+	display: flex;
+	justify-content: space-between;
+}
+
+.container{
+	max-width: 1160px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+/*list*/
+.list{
+	list-style-type: none;
+	padding: 0;
+}
+
+/*paragraph*/
+.paragraph{
+	color: #283136;
+	font-size: 16px;
+	font-family: Roboto;
+	line-height: 1.5;
+	margin: 0;
+}
+
+.advantages--suptitle{
+	width: 245px;
+}
+
+/*link*/
+
+.nav a, .basket a{
+	color: #000;
+	text-decoration: none;
+	font-family: Roboto;
+	text-transform: uppercase;
+
+	top: 83px;
+    height: 30px;
+}
+
+.nav a {
+	margin-right: 45px;
+}
+
+.basket a {
+	margin-left: 26px;
+}
+
+.nav--open--link{
+	border-bottom: 2px solid #fb565a;
+}
+
+.logo--link img{
+	opacity: 1;
+}
+.logo--link img:hover{
+	opacity: .75;
+}
+
+.logo--link img:active{
+	opacity: .60;
+}
+
+.header--link:hover {
+	color: #fb565a;
+}
+
+.header--link:active {
+	opacity: 0.3;
+}
+
+.partners--link img {
+	opacity: .2;
+}
+
+.partners--link img:hover {
+	opacity: 1;
+}
+
+.partners--link img:active {
+	opacity: .1;
+}
+
+
+/*buttun*/
+.button{
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 500;
+	cursor: pointer;
+	border: 0 none;
+	outline: none;
+	opacity: 0.90;
+}
+
+.slider--button{
+	background: #fb565a;
+	padding: 19px 55px;	
+	margin: 42px 0;
+}
+
+.button--red{
+	background: #e74246;
+	padding: 19px 39px;
+	margin-top: 35px;
+}
+
+.button--green{
+	background: #00ca74;
+	padding: 19px 39px;	
+	margin-top: 35px;
+}
+
+.button--yellow{
+	background: #efc84a;
+	padding: 19px 39px;	
+	margin-top: 35px;
+}
+
+.button:hover{
+	opacity: 0.95;
+}
+
+.button:active{
+	color: rgba(255, 255, 255, 0.3);
+	opacity: 1;
+}
+
+.sort button{
+	border:none;
+    background:none;
+    margin: 0 13px;
+    opacity: 0.3;
+}
+
+.sort button:hover{
+	opacity: 0.6;
+}
+
+.sort button:active{
+	opacity: 1;
+}
+
+.test :visited{
+	color: black;
+}
+
+/*Заголовки*/
+.catalog--title h1{
+	font-size: 55px;
 }
 
 /*header*/
-.header{
-	background: #eeeeee;
-	font-size: 16px;
-	text-transform: uppercase;
+.header-block{
+	padding: 49px 0 0 0;
 }
 
-
-/*index*/
-.advantages_title{
-	text-transform: uppercase;
-	font-size: 24px;
-}
-
-.advantages_sup_title{
-	font-size: 16px;
-	color: #283136;
-	line-height: 1.5;
-}
-
-.advantages a{
-	text-transform: uppercase;
-	font-size: 16px;
-	color: #ffffff;
-	line-height: 1.5;
-}
-
-
-/*catalog*/
-.card_link{
-	display: none;
-}
-
-.catalog_title{
+header, .slider{	
 	background: #eeeeee;
 }
 
-.grid_block,
-.features_block{
-	color: #283136;
+.nav, .basket {
+	font-weight: 500;
+    margin-top: 31px;
+    height: 30px;
 }
 
-.grid_title,
-.features_title{
+
+
+
+
+
+/*Первый блок*/
+.slider--all{
+	position: relative;
+	padding: 36px 0 0 0;
+}
+
+.slider--text{
+	margin: 30px 0;
+	width: 390px;
+}
+
+.slider--text--title{
+	font-size: 55px;
+	font-weight: 500;
+
+	margin-bottom: 28px;
+	line-height: 1;
+}
+.next--slide{
+	right: 505px;
+    position: absolute;
+    bottom: 96px;
+}
+
+/*второй блок*/
+
+.advantages{
+	padding: 80px 0 80px 0;
+	margin: 0;
+}
+
+.advantages--title{
 	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 18px;
-	color: #000000;
+	margin: 26px 0;
 }
 
 
+/*трейти блок*/
+.about{
+	padding: 40px 0 77px 0;
+}
+
+.about--information{
+	width: 650px;	
+    margin: 40px 0 0 0;
+}
+
+.about--information-title{
+	margin-bottom: 35px;
+
+	font-family: Roboto;
+ 	font-size: 45px;
+    font-weight: 500;
+}
+
+.about--information--suptitle{
+	margin-bottom: 47px;
+}
+
+.about--information li {
+    position: relative;
+    line-height: 24px;
+    margin-top: 20px;
+    margin-left: 36px;
+}
+
+
+
+.about--information--list::before {
+    content: "";
+    bottom: 10px; 
+    left: -35px;
+    width: 25px;
+    height: 2px;
+    background-color: #fb565a;
+    position: absolute;
+}
+
+.about--wedo--title, .about--statistics--title{
+	text-transform: uppercase;
+}
+
+.about--statistics{
+	width: 360px;
+}
+
+.about--statistics--title{
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin: 41px 0 0 0;
+}
+
+.about--statistics--img{
+	margin: 0 0 49px 0;
+}
+
+.statistics--percent--numbers { 
+	width: 110px;
+ }
+
+
+.statistics--percent b{
+	font-size: 45px;
+	font-family: Roboto;
+}
+
+
+.statistics--percent p{
+	margin: 27px 0 0 0;
+}
+
+
+.statistics--percent sup{
+	font-size: 60%;
+}
+
+/*четвертый блок*/
+.partners{
+	align-items: center;    
+	margin: 45px 0;
+}
+
+.hr-double {
+    width: 2px;
+    height: 52px;
+	border: none;
+	background:  #efefef;
+}
+
+.hr-partners {
+    width: 1160px;
+    height: 2px;
+	border: none;
+	background:  #efefef;
+	margin: 0;
+}
 
 /*footer*/
-.footer_feedback{
-	display: none;	
+
+.feedback--adress{
+	width: 219px;
+    padding: 50px;
+    top: 54px;
+    left: 140px;
+    background: #fff;
 }
 
-.footer_title{
-	font-size: 36px;
+.feedback--adress--title{
+	font-size: 18px;
+	margin-bottom: 32px;
 }
 
-.footer_social li{
-	width: 70px;
-	height: 70px;
+.feedback--adress--suptitle{
+	color: #666666;
+}
+
+.feedback--adress  .button--red {
+	padding: 19px 33px;
+}
+
+.feedback--form{
+	position: absolute;
+    top: 58px;
+    left: 500px;
+    display: none;
+}
+
+/*footer icons*/ 
+.footer--feedback{
+	background-image: url(../img/where/where.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+	margin: 80px 0 0 0;
+}
+
+.where{
+	padding: 54px 0;
+}
+
+
+.footer--social{
+    height: 81px;
+    align-items: center;
+    margin: 69px 0;
+}
+.social--icons, .footer--text{
+	float: left;
+    margin: 0 130px 0 0;
+	padding: 0;
+}
+
+.social--icons li {
+	width: 79px;
+	height: 79px;
 	background-color: #eeeeee;
 	border-radius: 50%;
+	margin-right: 12px;
 }
 
-.footer_social a{
+.social--icons a{
 	display: block; /* Ссылка как блочный элемент */
     text-align: center; /* Выравнивание по центру */
     height: 100%; /* Высота на весь слой */
@@ -82,11 +416,11 @@ body{
     position: relative;
 }
 
-.footer_social li:hover{
+.social--icons li:hover{
 	background: #E84044;
 }
 
-.footer_social svg{
+.social--icons svg{
     position: absolute;
     margin: auto;
     left: 0;
@@ -95,14 +429,56 @@ body{
     right: 0;
 }
 
-.footer_social li:active{
+.social--icons li:active{
     background: #D83438;
 }
 
-.footer_social li:active svg{
+.social--icons li:active svg{
     opacity: 0.4;
 }
 
-.footer p{
-    color: #444444;
+/*footer text*/
+.footer--title{
+	font-size: 36px;
+	margin-bottom: 12px;
+}
+
+
+/*catalog*/
+.main--header {
+	padding: 100px 0;
+	background: #eeeeee;
+}
+
+.catalog--title{
+	margin: 0 216px;
+}
+
+.products{
+	width: 760px;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-end;
+}
+
+.products--pattern, .products--pattern--right{
+	width: 360px;
+	height: 616px;
+}
+
+.products--pattern--right{
+	margin-left: 40px;
+}
+
+.main--main{
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-end;
+	width: 100%;
+
+}
+
+.aside{
+	width: 261px;
+
 }
